<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel_white_24dp"
        android:title="@string/cancel"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:title="@string/restore"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/archive"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete_forever"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/delete_forever"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>